# learningOpenGL

./: README.md
00Example/: CMakeLists.txt  main.cpp
01config_frist/: CMakeLists.txt  config_build.sh  main.cpp
02triangle/: CMakeLists.txt  main.cpp
03Using_modern_opengl/: main.cpp
04Vertex_Buffer/: CMakeLists.txt  main.cpp
06Shaders_works/: CMakeLists.txt  clear_compiler.sh  compiler.sh  main.cpp
08Deal_with_opengl/: CMakeLists.txt  main.cpp
09Index_buffer/: CMakeLists.txt  main.cpp
10Deal_withError/: main.cpp
10Deal_withError/res/shaders/: Basic.shader
11Uniform_variable/: main.cpp
12Vertex_arrays/: main.cpp
13Data_Struct/: CMakeLists.txt  main.cpp
13Data_Struct/src/: Renderer.cpp
14VertexArray_Struct/: CMakeLists.txt  main.cpp
14VertexArray_Struct/src/: IndexBuffer.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.h
15Shader_Struct/: CMakeLists.txt  main.cpp
15Shader_Struct/src/: ErrorCheck.h  VertexBufferLayout.h
16Renderer_Struct/: CMakeLists.txt  main.cpp
16Renderer_Struct/src/: Shader.cpp  Shader.h
17Texture/: CMakeLists.txt  main.cpp
17Texture/res/shaders/: Basic.shader
17Texture/src/: Shader.cpp  Shader.h  Texture.cpp  VertexArray.cpp
18_MathIn_OpenGL/: main.cpp
18_MathIn_OpenGL/src/: ErrorCheck.h  Shader.cpp  Texture.h
19_Projection_Matrix/: CMakeLists.txt  main.cpp
19_Projection_Matrix/res/shaders/: Basic.shader
19_Projection_Matrix/src/: IndexBuffer.h
20View_Transform/: main.cpp
20View_Transform/src/: ErrorCheck.cpp  Renderer.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
21ImGui_OpenGL/: CMakeLists.txt  imgui.ini  main.cpp
21ImGui_OpenGL/src/: VertexArray.h
22Render_Multiple/: CMakeLists.txt  imgui.ini  main.cpp
22Render_Multiple/src/: Shader.cpp  Shader.h
23Testing_Examples/: CMakeLists.txt  imgui.ini  main.cpp
23Testing_Examples/src/: IndexBuffer.cpp  Texture.cpp  VertexBuffer.h
23Testing_Examples/src/test/: TestClearColor.h
24Texture_Testing/: CMakeLists.txt  imgui.ini  main.cpp
24Texture_Testing/src/: Renderer.h
24Texture_Testing/src/test/: Test.cpp  Test.h  TestClearColor.cpp  TestTexture2D.cpp  TestTexture2D.h
learnOpenGL/03Textures/: CMakeLists.txt  main.cpp
learnOpenGL/10_1Multiple_Lights/: CMakeLists.txt  README.md  imgui.ini  main.cpp
learnOpenGL/11_AssimpModel/: CMakeLists.txt  compile_commands.json  xmake.lua
learnOpenGL/11_AssimpModel/include/: camera.h
learnOpenGL/11_AssimpModel/src/: main.cpp
learnOpenGL/12_Depth_Testing/: CMakeLists.txt
learnOpenGL/12_Depth_Testing/src/: main.cpp
learnOpenGL/13_1_Blending/: CMakeLists.txt
learnOpenGL/13_1_Blending/include/: mesh.cpp
learnOpenGL/13_Blending/: CMakeLists.txt
learnOpenGL/14_Face_Culling_exercise/: CMakeLists.txt
learnOpenGL/15_FrameBuffers/: CMakeLists.txt
learnOpenGL/15_FrameBuffers/include/: shader.cpp
learnOpenGL/15_FrameBuffers/resources/glsl/: framebuffers_screen.fs
learnOpenGL/15_FrameBuffers/src/: main.cpp
learnOpenGL/16_1_Cubemaps_reflection/: CMakeLists.txt
learnOpenGL/16_Cubemaps/: CMakeLists.txt
learnOpenGL/17_Stencil_testing/: CMakeLists.txt
learnOpenGL/18_2_Advanced_glsl/: CMakeLists.txt
learnOpenGL/18_Advanced_glsl/: CMakeLists.txt
learnOpenGL/18_Advanced_glsl/res/glsl/: shader.vs
learnOpenGL/18_Advanced_glsl/src/: main.cpp
learnOpenGL/19_1_Geometry_Shader/: CMakeLists.txt  compile_commands.json  xmake.lua
learnOpenGL/19_3_Geometry_Shader/: CMakeLists.txt
learnOpenGL/19_Geometry_Shader/: CMakeLists.txt  compile_commands.json  xmake.lua
learnOpenGL/20_1_instancing/: compile_commands.json  xmake.lua
learnOpenGL/20_2_instancing/: compile_commands.json
learnOpenGL/20_3_an_asteroid_field/: compile_commands.json  xmake.lua
learnOpenGL/20_4_an_asteroid_field_instances/: compile_commands.json
learnOpenGL/21_2_offscreen_msaa/: xmake.lua
learnOpenGL/21_anti_aliasing/: xmake.lua
learnOpenGL/22_Blionn_phong/: xmake.lua
learnOpenGL/23_gamma_correction/: xmake.lua
learnOpenGL/24_shadow_mapping/: lookat.typ  ortho.typ  xmake.lua
learnOpenGL/25_point_shadows/: xmake.lua
learnOpenGL/26_1_normal_mapping/: xmake.lua
learnOpenGL/26_3_normal_mapping/: xmake.lua
learnOpenGL/2_1hello_triangle/: CMakeLists.txt  main.cpp
learnOpenGL/2_2hello_multitriangle/: CMakeLists.txt  main.cpp  n_location.cpp
learnOpenGL/3_1Shader/: CMakeLists.txt  main.cpp
learnOpenGL/4_1Textures/: CMakeLists.txt  main.cpp
learnOpenGL/4_2Textures/: CMakeLists.txt  imgui.ini  main.cpp
learnOpenGL/5_1Transform_Matrix/: CMakeLists.txt  imgui.ini  main.cpp
learnOpenGL/6_1Corrdinate_System/: CMakeLists.txt  imgui.ini  main.cpp
learnOpenGL/6_1Corrdinate_System/res/glsl/: shader.fs  shader.vs
learnOpenGL/6_1Corrdinate_System/source/: Shader.h
learnOpenGL/6_2Corrdinate_System_3D/: CMakeLists.txt  imgui.ini  main.cpp
learnOpenGL/7_1Camera/: CMakeLists.txt  imgui.ini  main.cpp
learnOpenGL/7_2Camera/: CMakeLists.txt  imgui.ini  main.cpp
learnOpenGL/7_3Camera/: CMakeLists.txt  imgui.ini  main.cpp
learnOpenGL/8_1Light/: CMakeLists.txt  imgui.ini  main.cpp
learnOpenGL/8_2Specular_Light/: CMakeLists.txt  imgui.ini  main.cpp
learnOpenGL/8_3Specular_Light_MultiWindow/: CMakeLists.txt  imgui.ini  main.cpp
learnOpenGL/8_4Meterial/: CMakeLists.txt  imgui.ini  main.cpp
learnOpenGL/8_5LightingMaps/: CMakeLists.txt  compile_commands.json  main.cpp  xmake.lua
learnOpenGL/8_6EmissionMaps/: CMakeLists.txt  main.cpp
learnOpenGL/9_1LightCasters_DirectionLight/: CMakeLists.txt  README.md  main.cpp
learnOpenGL/9_2LightCasters_PointLight/: CMakeLists.txt  README.md  imgui.ini  main.cpp
learnOpenGL/9_3LightCasters_Splotlight/: CMakeLists.txt  README.md  imgui.ini  main.cpp
learnOpenGL/9_4LightCasters_SmoothSplotlight/: CMakeLists.txt  imgui.ini  main.cpp
learnOpenGL/doc/: perspective.typ  renderdoc_capture.typ
learnOpenGL/draw_RRect/: xmake.lua
learnOpenGL/hello_window/: CMakeLists.txt  main.cpp
learnOpenGL/show_yuv_frame/: readme.typ  xmake.lua
self_test/01/: main.cpp
self_test/02/: CMakeLists.txt  main.cpp
self_test/03/: CMakeLists.txt  main.cpp
(+146 files in other folders)
